--- a/MVC_Project_01/src/main/resources/application.properties
+++ b/MVC_Project_01/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=MVC_Project_01
 
-spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
